fix header visibility

--- a/src/header/index.styl
+++ b/src/header/index.styl
@@ -50,7 +50,7 @@ header.site-header
 
   .navbar
     .container
-      padding 0 50px
+      padding 0 40px
       width auto
 
   .navbar-inverse
